2005-05-26  Keith Packard  <keithp@keithp.com>

	* src/iccompose.c: (IcFetch_transform), (IcFetcha_transform),
	(IcBuildCompositeOperand):
	* src/icimage.c: (pixman_image_init), (pixman_image_destroy),
	(pixman_image_set_clip_region), (IcClipImageSrc):
	* src/icimage.h:

	Split clipping into separate source and destination operand
	clips.  By default, source operands are not affected by
	any client clipping.  This matches the desired semantics
	for cairo.  When this code is ported back to the X server,
	that will have to select the clipping option which clip
	source operands to the client clip.

2005-05-18  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to CAIRO_VERSION after tagging with
	SNAPSHOT_0_1_5.

2005-05-18  Carl Worth  <cworth@cworth.org>

	* NEWS: Add notes for snapshot 0.1.5.

	* configure.in: Increment version to 0.1.5.

2005-05-18  Carl Worth  <cworth@cworth.org>

	* src/icimage.c (pixman_image_destroy): Clear pointers to NULL
	after destroying/freeing them.

2005-05-18  Carl Worth  <cworth@cworth.org>
	
	* src/pixman.h: Declare pixman_fixed16_16_t properly as int32_t
	rather than just int. Reported by Lance Fetters.

2005-05-12  Keith Packard  <keithp@keithp.com>

	reviewed by: cworth

	* src/ictrap.c: (pixman_composite_trapezoids):
	libpixman creates an A8 format object and sometimes forgets to
	destroy (when the bounds of the trapezoids are empty).
	Avoids creating the format object in that case.

2005-04-27  Owen Taylor  <otaylor@redhat.com>

	* src/icimage.c (pixman_image_set_clip_region): Set
	image->pCompositeClip here.
	(IcComputeCompositeRegion) src/icrect.c (pixman_color_rects):
	Remove workaround clipping to the clientClip.

2005-04-27  Owen Taylor  <otaylor@redhat.com>

	* src/ic.c: Don't use pixman_compositeSrc_8888x8888 when
	the source is x8r8g8b8 or x8b8g8r8.

2005-03-29  T Rowley  <tim.rowley@gmail.com>

	* src/pixman.h: add AIX to the test for inttypes.h

2005-03-11  Owen Taylor  <otaylor@redhat.com>
